variables.Variables.scala.error
Erreur de compilation :
Variables:1: error: not found: value int
int count=0
^Variables:5: error: not found: value count
    count=count+1
    ^Variables:7: error: not found: value count
while(count!=0)
      ^Variables:9: error: type mismatch;
 found   : Unit
 required: Int
    recule{}
          ^Variables:10: error: not found: value count
    count=count-1
    ^